mi-app/marto-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: marto-service
spec:
  selector:
    app: marto
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
