mi-app/marto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marto-app
spec:
  rules:
    - host: marto-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marto-service
                port:
                  number: 80
